build: Clean up pom.xml